[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/tutorial/map/background_tutorial.png" type="Texture" id=1]
[ext_resource path="res://scenes/base_phase/BossTable.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Fonts/joystix_monospace_font.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/slots/Slot.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/items/profile_sheets/kira_small_sheet.png" type="Texture" id=5]
[ext_resource path="res://scripts/tutorial/FileExplanning.gd" type="Script" id=6]
[ext_resource path="res://assets/buttons/right_button.png" type="Texture" id=7]
[ext_resource path="res://assets/items/profile_sheets/kira_big_sheet.png" type="Texture" id=8]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.466667, 0.72549, 0.858824, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
shadow_color = Color( 1, 1, 1, 0.811765 )
shadow_size = 7

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.964706, 0.941176, 0.858824, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color( 1, 1, 1, 1 )
shadow_size = 10
anti_aliasing = false

[sub_resource type="DynamicFont" id=2]
size = 23
font_data = ExtResource( 3 )

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -16.1538, -3.63655, 0, 0, 0, 0, 415.845, -90.9094 )
}

[sub_resource type="Curve2D" id=5]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1024, 208, 0, 0, 0, 0, 184, 368 )
}

[node name="File" type="Node2D"]
script = ExtResource( 6 )

[node name="BackGround" type="Sprite" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 0.727273, 0.75 )
texture = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
modulate = Color( 0, 0, 0, 0.901961 )
self_modulate = Color( 0, 0, 0, 0.843137 )
margin_right = 1280.0
margin_bottom = 720.0

[node name="BossTable" parent="." instance=ExtResource( 2 )]
position = Vector2( 768, 0 )

[node name="Panel" type="Panel" parent="BossTable"]
margin_left = -624.0
margin_top = 328.0
margin_right = -544.0
margin_bottom = 408.0
custom_styles/panel = SubResource( 3 )

[node name="Slot" parent="." instance=ExtResource( 4 )]
margin_left = 152.0
margin_top = 336.0
margin_right = 216.0
margin_bottom = 400.0
rect_min_size = Vector2( 64, 64 )
uid = "profile"
qtd = 1
slot_type = 1
slot_size = Vector2( 64, 64 )
images_size = Vector2( 64, 64 )
table_image = ExtResource( 5 )
boss_table_image = ExtResource( 8 )

[node name="text_box" type="Panel" parent="."]
margin_left = 88.0
margin_top = 424.0
margin_right = 672.0
margin_bottom = 692.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="text" type="RichTextLabel" parent="text_box"]
margin_left = 16.0
margin_top = 12.0
margin_right = 572.0
margin_bottom = 224.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true

[node name="back_button" type="TextureButton" parent="text_box"]
margin_left = 44.0
margin_top = 262.0
margin_right = 80.0
margin_bottom = 298.0
rect_rotation = 180.0
texture_normal = ExtResource( 7 )

[node name="next_button" type="TextureButton" parent="text_box"]
margin_left = 540.0
margin_top = 226.0
margin_right = 576.0
margin_bottom = 262.0
texture_normal = ExtResource( 7 )

[node name="path2d_worker_table" type="Path2D" parent="."]
position = Vector2( 215.111, 374.667 )
scale = Vector2( 1.92593, 1.83333 )
curve = SubResource( 4 )

[node name="pathfollow_worker_table" type="PathFollow2D" parent="path2d_worker_table"]
position = Vector2( -16.1538, -3.63655 )
rotation = -3.03401
rotate = false
cubic_interp = false

[node name="kira_worker" type="Sprite" parent="path2d_worker_table/pathfollow_worker_table"]
self_modulate = Color( 1, 1, 1, 0.745098 )
position = Vector2( 0.00119019, -0.000427246 )
rotation = 3.03401
scale = Vector2( 1.02793, 1.09675 )
texture = ExtResource( 5 )

[node name="path2d_table_worker" type="Path2D" parent="."]
curve = SubResource( 5 )

[node name="pathfollow_table_worker" type="PathFollow2D" parent="path2d_table_worker"]
position = Vector2( 1024, 208 )
rotation = 2.95337
rotate = false

[node name="kira_table" type="Sprite" parent="path2d_table_worker/pathfollow_table_worker"]
modulate = Color( 1, 1, 1, 0.627451 )
self_modulate = Color( 1, 1, 1, 0.745098 )
rotation = -2.9531
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="back_button" type="TextureButton" parent="."]
margin_left = 768.0
margin_top = 696.0
margin_right = 816.0
margin_bottom = 744.0
rect_rotation = 180.0
texture_normal = ExtResource( 7 )

[node name="next_button" type="TextureButton" parent="."]
margin_left = 1205.0
margin_top = 645.0
margin_right = 1253.0
margin_bottom = 693.0
texture_normal = ExtResource( 7 )


[connection signal="dropped_item" from="Slot" to="." method="_on_Slot_dropped_item"]
[connection signal="get_item" from="Slot" to="." method="_on_Slot_get_item"]
[connection signal="pressed" from="text_box/back_button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="text_box/next_button" to="." method="_on_next_button_pressed"]
